<resources>
    <string name="app_name">FoodAtDoor</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">User Name :</string>
    <string name="phn_no">Phone No.</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">back</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="about_app">About</string>
    <string name="account_setting">Account Setting</string>
    <string name="update_password">Update Password</string>
    <string name="logout">Logout</string>
    <string name="nav_header_desc">profile Image</string>
    <string name="username">UserName</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="Rs">\u20B9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawerOpen">open</string>
    <string name="drawerClose">close</string>
    <string name="faq">FAQ</string>
    <string name="not_verify">Not Verified</string>
    <string name="action_sort">sorting</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="place_order">Place Order</string>
    <string name="ordering_form">ordering Form</string>


    <string name="question1">Q1. What is FoodAtDoor ?</string>
    <string name="answer1">A1. FoodAtDoor is a food delivery service that does Home Deliveries to its customers 24X7.</string>
    <string name="question2">Q2. How are you guys are different?</string>
    <string name="answer2">A2. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodAtDoor Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="question3">Q3. How do you place an order on FoodAtDoor?</string>
    <string name="answer3">A3. You can place an order with Food Mood" by logging into the app, Selecting a restaurant of your choice and adding items from the selected restaurant menu to your cart and then place your order.</string>
    <string name="question4">Q4. Can I order multiple items from same restaurant?</string>
    <string name="answer4">A4. Yes, you can order multiple items from the same restaurant but you can order 1 type of item only once.</string>
    <string name="question5">Q5. Can I order from multiple restaurants?</string>
    <string name="answer5">A5. No, At a time you can only order from a single restaurant.</string>
    <string name="question6">Q6 What if I forget my Username or password?</string>
    <string name="answer6">A6 No Worries! We got you covered. You can simply click on forgot password at the login screen and you will be guided through the process to get your account back.</string>
    <string name="aboutApp">FoodAtDoor provides you a different flavor of food on a single platform through this Android mobile application. We have our own smart delivery team which pickup orders from our vendors and deliver it to customers 24x7</string>


    <string name="ordering_from">Ordering Form</string>
    <string name="cart">My Cart</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find restaurant with the name</string>
    <string name="no_orders_placed">No Order Placed</string>
    <string name="your_previous_orders">Your Previous Orders</string>
    <string name="preference_file_name">your Information</string>
    <string name="dialogTitle">Choose From :</string>
    <string name="dialogMessage">upload profile pic</string>

</resources>