<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/navigation_my_orders"
            android:icon="@drawable/ic_history"
            android:title="Order History"/>

        <item
            android:id="@+id/navigation_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />

        <item
            android:id="@+id/aboutApp"
            android:icon="@drawable/ic_about_app"
            android:title="@string/about_app" />

    </group>
    <item android:title="@string/account_setting">
        <menu>
            <item
                android:id="@+id/updatePassword"
                android:icon="@drawable/password"
                android:title="@string/update_password" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>

    </item>


</menu>

