<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signback"
    tools:context=".InfoAfterGoogle">


    <LinearLayout
        android:id="@+id/SignUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/name"
            android:textColor="#fff"
            android:textColorHint="#D8B5B5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phn"
            android:hint="@string/phn_no"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#D8B5B5" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_address"
            android:hint="Delivery Address"
            android:textColor="#fff"
            android:textColorHint="#D8B5B5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_pin"
            android:hint="Pin code"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="#fff"
            android:textColorHint="#D8B5B5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email_edt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="18sp"
            android:textColor="#fff"
            android:textColorHint="#D8B5B5" />


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Already a user?"
        android:textColor="#B5370F"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_link"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="8dp"
        android:text="Login"
        android:textColor="#fff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>